--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 <p>todo-list</p>
 
 <ul>
-    <li *ngFor="let todo of todolist">{{todo.name}}}</li>
+    <li *ngFor="let todo of todolist">{{todo.name}}</li>
 </ul>
